force/src/objects/Deliverable_Details__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW</label>
        <type>Checkbox</type>
    </fields>
    <label>Deliverable Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverable Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>